# sesyaz

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  sesyaz.desktop
sesyaz/: __init__.py  __main__.py  app.py  main_window.py  waveform_widget.py
sesyaz/audio/: audio_utils.py  recorder.py
sesyaz/config/: config_manager.py  keyring_manager.py
sesyaz/output/: output_handler.py
sesyaz/transcription/: openai_client.py
sesyaz/ui/: settings_dialog.py  setup_dialog.py
