[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "sesyaz"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "openai>=1.35.0",
    "keyring>=24.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sesyaz*"]
